err/pyradi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyradi'...
Listing './lib/python3.5/site-packages/pyradi/data'...
Listing './lib/python3.5/site-packages/pyradi/data/absorptioncoeff'...
Listing './lib/python3.5/site-packages/pyradi/data/colourcoordinates'...
Listing './lib/python3.5/site-packages/pyradi/data/hdf5-old'...
Listing './lib/python3.5/site-packages/pyradi/data/images'...
Listing './lib/python3.5/site-packages/pyradi/data/imgmotion'...
Listing './lib/python3.5/site-packages/pyradi/data/photometry'...
Listing './lib/python3.5/site-packages/pyradi/data/plotspherical'...
Listing './lib/python3.5/site-packages/pyradi/data/scene'...
Listing './lib/python3.5/site-packages/pyradi/doc'...
Listing './lib/python3.5/site-packages/pyradi/doc/_images'...
Listing './lib/python3.5/site-packages/pyradi/doc/_static'...
Listing './lib/python3.5/site-packages/pyradi/examples'...
Compiling './lib/python3.5/site-packages/pyradi/examples/exflamesensor.py'...
***   File "./lib/python3.5/site-packages/pyradi/examples/exflamesensor.py", line 54
    from __future__ import division
    ^
SyntaxError: from __future__ imports must occur at the beginning of the file

Listing './lib/python3.5/site-packages/pyradi/test'...
Listing './lib/python3.5/site-packages/pyradi-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
